-----------------------------------------------------------------------------------------
	$Id$
-----------------------------------------------------------------------------------------

2012-02-07	jluis
	* ps2raster.c:		On Windows the ghostscript executable path is now fetch from
				the registry. In caise it fails, fall back to the old "get
				it from the path" mechanism.

2012-02-02	pwessel
	* pslegend.c:		Did not process -U, and had usage message about obsolete -S
	* gmt_proj.c:		For -JE, both projection center and antipode gave x = y = 0.
				Now, antipode results in NaN, NaN and a flag is set.

2012-01-31	pwessel
	* pstext.c:		Enhanced -DJ option will shorten diagonal offsets by sqrt(2) to
				maintain the same distance from point to annotation.

2012-01-30	jluis
	* ps2raster.c:		On Windows the default name of the ghostscript executable 
				is now that of the 64 bits version (gswin64c).

2012-01-25	remko
	* gmt_io.c:		GMT_GRDIO_RI_NOREPEAT should not be fatal.

2012-01-15	pwessel
	* minmax.c:		Determine if input data already lie on a regular lattice;
				if so, use the phase shifts in x,y to determine -R when -I
				is given, and allow -r to switch to pixel-registration.

2012-01-13	pwessel
	* gmt_support.c:	The quoted line labeling would not free an allocated label
				when the label had no text string.
	* pslib.c:		Added support so that the bit-flags passed into psl_vector
				and psl_mangle controls if vector heads are filled and
				outlined.
	* pslib.txt:		Updated documentation for the changes to vectors.
	* gmt_plot.c:		Let geo_vector also use the bit-flags to change vector head
				fill and outline.
	* minmax.c:		Added the -r option so that users who have pixel-registered
				xyz data can get correct -R via the -I option.
	* psxy[z].c:		Make sure we process the vector modifiers when read via input.

2012-01-10	jluis
	* gmt_customio.c:	GMT_gdal_read_grd was ignoring subregion requests like for